--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,87 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&family=Roboto:wght@300;400;500;700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.ff-inter { font-family: 'Inter', sans-serif; }
+.ff-roboto { font-family: 'Roboto', sans-serif; }
+
+h1 {
+  position: absolute;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+}
+
+h2 {
+  color: #154580;
+  font-weight: bold;
+  font-size: 2rem;
+  text-align: center;
+}
+
+.header {
+  margin: 1rem auto 2rem;
+}
+
+.container {
+  padding-right: 1rem;
+  padding-left: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.botao {
+  background: #2655FB;
+  color: #FFFFFF;
+  max-width: 270px;
+  width: 250px;
+  padding: 1rem;
+  margin: 0 auto;
+  border: 2px solid #2655FB;
+  border-radius: 10px;
+  transition: 0.5s ease;
+}
+
+.botao:hover {
+  border: 2px solid #1f43c4;
+  color: #ffffff;
+}
+
+.botao__secundario {
+  background: #4B5962;
+  color: #FFFFFF;
+  max-width: 270px;
+  width: 250px;
+  padding: 1rem;
+  margin: 0 auto;
+  border: 2px solid #4B5962;
+  border-radius: 10px;
+  transition: 0.5s ease;
+}
+
+@media (min-width: 576px) {
+  .container {
+      width: 540px;
+  }
+}
+@media (min-width: 768px) {
+  .container {
+      width: 720px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+      width: 960px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+      width: 1140px;
+  }
+}
