--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>footer works!</p>
+<footer>
+    <div class="footer-content">
+      <p>Política de Privacidade</p>
+      <p>CycleLab: Saúde Para Todos</p>
+      <p>&copy; 2023</p>
+    </div>
+  </footer>
+  
