add: login page

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,27 @@
-<p>login works!</p>
+<div class="login-container">
+    <div class="left-section">
+      <div class="logo-section">
+        <img src="../../../assets/images/CycleLabLogo-NoBg.png" alt="Imagem de fundo">
+        <h1 class="ff-roboto">Login</h1>
+        <p class="ff-inter">Entre com sua conta ou cadastre-se</p>
+      </div>
+      <form>
+        <div class="form-group">
+          <label for="email" class="ff-roboto">Email:</label>
+          <input type="email" id="email" name="email" placeholder="Digite seu Email">
+        </div>
+        <div class="form-group">
+          <label for="password" class="ff-roboto">Senha:</label>
+          <input type="password" id="password" name="password" placeholder="Digite sua Senha">
+        </div>
+        <div class="buttons">
+          <button type="submit" class="botao ff-roboto">Entrar</button>
+          <button type="button" class="botao__secundario ff-roboto">Criar conta</button>
+        </div>
+      </form>
+    </div>
+    <div class="right-section">
+      <img src="../../../assets/images/sample_login.png" alt="Imagem de fundo">
+    </div>
+  </div>
+  
