--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,7 +1,7 @@
 footer {
     background-color: #f2f2f2;
-    padding: 10px;
     text-align: center;
+    height: 6px;
   }
   
   .footer-content {
