--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -4,7 +4,7 @@ header {
     justify-content: space-around;
     padding: 10px;
     background-color: #475E6B;
-    height: 40px;
+    height: 6vh;
   }
   
   .left-section h1 {
