add: register page

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -16,7 +16,7 @@
         </div>
         <div class="buttons">
           <button type="submit" class="botao ff-roboto">Entrar</button>
-          <button type="button" class="botao__secundario ff-roboto">Criar conta</button>
+          <button type="button" class="botao__secundario ff-roboto" routerLink="/register">Criar conta</button>
         </div>
       </form>
     </div>
