--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    position: relative; /* Adicionado para posicionar o logo de forma absoluta */
+    position: relative; 
   }
   
   .logo-section {
