--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,1 +1,29 @@
-<p>register works!</p>
+<div class="register-container">
+    <div class="left-section">
+      <div class="logo-section">
+        <img src="../../../assets/images/CycleLabLogo-NoBg.png" alt="Imagem de fundo">
+        <h1 class="ff-roboto">Cadastre-se</h1>
+      </div>
+      <form>
+        <div class="form-group">
+          <label for="email" class="ff-roboto">Email:</label>
+          <input type="email" id="email" name="email" placeholder="Digite seu Email">
+        </div>
+        <div class="form-group">
+          <label for="password" class="ff-roboto">Senha:</label>
+          <input type="password" id="password" name="password" placeholder="Digite sua Senha">
+        </div>
+        <div class="form-group">
+          <label for="password_confirmation" class="ff-roboto">Confirmação da Senha:</label>
+          <input type="password_confirmation" id="password_confirmation" name="password_confirmation" placeholder="Digite sua Senha Novamente">
+        </div>
+        <div class="buttons">
+          <button type="submit" class="botao ff-roboto" routerLink="/login">Criar conta</button>
+        </div>
+      </form>
+    </div>
+    <div class="right-section">
+      <img src="../../../assets/images/sample_login.png" alt="Imagem de fundo">
+    </div>
+  </div>
+  
