--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,7 +15,7 @@
           <input type="password" id="password" name="password" placeholder="Digite sua Senha">
         </div>
         <div class="buttons">
-          <button type="submit" class="botao ff-roboto">Entrar</button>
+          <button type="submit" class="botao ff-roboto" routerLink="/homepage">Entrar</button>
           <button type="button" class="botao__secundario ff-roboto" routerLink="/register">Criar conta</button>
         </div>
       </form>
