--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,27 +1,38 @@
 <div class="login-container">
-    <div class="left-section">
-      <div class="logo-section">
-        <img src="../../../assets/images/CycleLabLogo-NoBg.png" alt="Imagem de fundo">
-        <h1 class="ff-roboto">Login</h1>
-        <p class="ff-inter">Entre com sua conta ou cadastre-se</p>
+  <div class="left-section">
+    <div class="logo-section">
+      <img src="../../../assets/images/CycleLabLogo-NoBg.png" alt="Imagem de fundo">
+      <h1 class="ff-roboto">Login</h1>
+      <p class="ff-inter">Entre com sua conta ou cadastre-se</p>
+    </div>
+    <form [formGroup]="formulario">
+      <div class="form-group">
+        <label for="email" class="ff-roboto">Email:</label>
+        <input type="email" id="email" name="email" formControlName="email" placeholder="Digite seu Email">
+        <div class="mensagem__erro"
+          *ngIf="formulario.get('email')?.errors?.['required'] && formulario.get('email')?.touched">
+          Email é obrigatório!
+        </div>
+        <div class="mensagem__erro"
+          *ngIf="formulario.get('email')?.errors?.['email'] && formulario.get('email')?.touched">
+          Email inválido!
+        </div>
       </div>
-      <form>
-        <div class="form-group">
-          <label for="email" class="ff-roboto">Email:</label>
-          <input type="email" id="email" name="email" placeholder="Digite seu Email">
+      <div class="form-group">
+        <label for="password" class="ff-roboto">Senha:</label>
+        <input type="password" id="password" name="password" formControlName="password" placeholder="Digite sua Senha">
+        <div class="mensagem__erro"
+          *ngIf="formulario.get('password')?.errors?.['required'] && formulario.get('password')?.touched">
+          Senha é obrigatória!
         </div>
-        <div class="form-group">
-          <label for="password" class="ff-roboto">Senha:</label>
-          <input type="password" id="password" name="password" placeholder="Digite sua Senha">
-        </div>
-        <div class="buttons">
-          <button type="submit" class="botao ff-roboto" routerLink="/homepage">Entrar</button>
-          <button type="button" class="botao__secundario ff-roboto" routerLink="/register">Criar conta</button>
-        </div>
-      </form>
-    </div>
-    <div class="right-section">
-      <img src="../../../assets/images/sample_login.png" alt="Imagem de fundo">
-    </div>
+      </div>
+      <div class="buttons">
+        <button type="submit" class="botao ff-roboto" routerLink="/homepage" [disabled]="formulario.invalid">Entrar</button>
+        <button type="button" class="botao__secundario ff-roboto" routerLink="/register">Criar conta</button>
+      </div>
+    </form>
   </div>
-  
+  <div class="right-section">
+    <img src="../../../assets/images/sample_login.png" alt="Imagem de fundo">
+  </div>
+</div>
