--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,7 +5,7 @@
       <h1 class="ff-roboto">Login</h1>
       <p class="ff-inter">Entre com sua conta ou cadastre-se</p>
     </div>
-    <form [formGroup]="formulario">
+    <form [formGroup]="formulario" (ngSubmit)="submitForm()">
       <div class="form-group">
         <label for="email" class="ff-roboto">Email:</label>
         <input type="email" id="email" name="email" formControlName="email" placeholder="Digite seu Email">
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="buttons">
-        <button type="submit" class="botao ff-roboto" routerLink="/homepage" [disabled]="formulario.invalid">Entrar</button>
+        <button type="submit" class="botao ff-roboto">Entrar</button>
         <button type="button" class="botao__secundario ff-roboto" routerLink="/register">Criar conta</button>
       </div>
     </form>
