--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -16,25 +16,32 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="password" class="ff-roboto">Senha:</label>
-        <input type="password" id="password" formControlName="password" placeholder="Digite sua Senha">
-        <div class="mensagem__erro" *ngIf="formulario.get('password')?.errors?.['required'] && formulario.get('password')?.touched">
+        <label for="senha" class="ff-roboto">Senha:</label>
+        <input type="senha" id="senha" formControlName="senha" placeholder="Digite sua Senha">
+        <div class="mensagem__erro" *ngIf="formulario.get('senha')?.errors?.['required'] && formulario.get('senha')?.touched">
           Senha é obrigatória!
         </div>
-        <div class="mensagem__erro" *ngIf="formulario.get('password')?.errors?.['pattern'] && formulario.get('password')?.touched">
+        <div class="mensagem__erro" *ngIf="formulario.get('senha')?.errors?.['pattern'] && formulario.get('senha')?.touched">
           Senha deve conter: 6 caracteres, caracter especial, letra maiúscula, número
         </div>
       </div>
       <div class="form-group">
-        <label for="password_confirmation" class="ff-roboto">Confirmação da Senha:</label>
-        <input type="password" id="password_confirmation" formControlName="password_confirmation" placeholder="Digite sua Senha Novamente">
-        <div class="mensagem__erro" *ngIf="formulario.get('password_confirmation')?.errors?.['required'] && formulario.get('password_confirmation')?.touched">
+        <label for="senhaConfirmacao" class="ff-roboto">Confirmação da Senha:</label>
+        <input type="senha" id="senhaConfirmacao" formControlName="senhaConfirmacao" placeholder="Digite sua Senha Novamente">
+        <div class="mensagem__erro" *ngIf="formulario.get('senhaConfirmacao')?.errors?.['required'] && formulario.get('senhaConfirmacao')?.touched">
           Confirmação da senha é obrigatória!
         </div>
-        <div class="mensagem__erro" *ngIf="formulario.get('password_confirmation')?.errors?.['passwordMismatch'] && formulario.get('password_confirmation')?.touched">
+        <div class="mensagem__erro" *ngIf="formulario.get('senhaConfirmacao')?.errors?.['senhaMismatch'] && formulario.get('senhaConfirmacao')?.touched">
           As senhas não correspondem!
         </div>
       </div>
+      
+      <!-- Checkbox isAdmin -->
+      <div class="form-group">
+        <label for="isAdmin" class="ff-roboto">Administrador:</label>
+        <input type="checkbox" id="isAdmin" formControlName="isAdmin">
+      </div>
+      
       <div class="buttons">
         <button type="submit" class="botao ff-roboto">Criar conta</button>
       </div>
