--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -9,8 +9,8 @@
       </thead>
       <tbody>
         <tr *ngFor="let user of listaUsers">
-          <td class="ff-roboto">{{ user.name }}</td>
-          <td class="ff-roboto">{{ user.role }}</td>
+          <td class="ff-roboto">{{ user.login }}</td>
+          <td class="ff-roboto">{{ user.roles }}</td>
           <td class="action-buttons">
             <button (click)="editUserRole(user.id!)">Alternar Função</button>
             <button (click)="deleteUser(user.id!)">Excluir</button>
