feat: reload page after edit/delete

--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -12,8 +12,8 @@
           <td class="ff-roboto">{{ user.login }}</td>
           <td class="ff-roboto">{{ user.roles }}</td>
           <td class="action-buttons">
-            <button (click)="editUserRole(user.login)">Alternar Função</button>
-            <button (click)="deleteUser(user.login)">Excluir</button>
+            <button (click)="editUserRole(user)">Alternar Função</button>
+            <button (click)="deleteUser(user)">Excluir</button>
           </td>
         </tr>
       </tbody>
