--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -37,7 +37,7 @@
       </div>
       
       <!-- Checkbox isAdmin -->
-      <div class="form-group">
+      <div class="form-group admin">
         <label for="isAdmin" class="ff-roboto">Administrador:</label>
         <input type="checkbox" id="isAdmin" formControlName="isAdmin">
       </div>
