--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -35,8 +35,6 @@
           As senhas não correspondem!
         </div>
       </div>
-      
-      <!-- Checkbox isAdmin -->
       <div class="form-group admin">
         <label for="isAdmin" class="ff-roboto">Administrador:</label>
         <input type="checkbox" id="isAdmin" formControlName="isAdmin">
@@ -44,6 +42,7 @@
       
       <div class="buttons">
         <button type="submit" class="botao ff-roboto">Criar conta</button>
+        <button type="button" class="botao__secundario ff-roboto" routerLink="/login">Voltar</button>
       </div>
     </form>
   </div>
