--- a/src/app/components/amostras/amostras.component.css
+++ b/src/app/components/amostras/amostras.component.css
@@ -1,3 +1,24 @@
+.button-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 16px;
+}
+
+.add-amostra-button {
+  padding: 8px 16px;
+  font-size: 16px;
+  border: none;
+  background-color: #007bff;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.add-amostra-button:hover {
+  background-color: #0056b3;
+}
+
+
 .table-container {
     width: 100%;
     overflow-x: auto;
