--- a/src/app/components/addamostra/addamostra.component.html
+++ b/src/app/components/addamostra/addamostra.component.html
@@ -1,4 +1,4 @@
-<div class="login-container">
+<div class="add-container">
     <div class="left-section">
       <img src="../../../assets/images/instruments_addamostra.png" alt="Imagem de fundo">
     </div>
