--- a/src/app/components/amostras/amostras.component.css
+++ b/src/app/components/amostras/amostras.component.css
@@ -7,8 +7,9 @@
 .add-amostra-button {
   padding: 8px 16px;
   font-size: 16px;
-  border: none;
-  background-color: #007bff;
+  border: 1px;
+  border-radius: 4px;
+  background-color: #2655FB;
   color: #fff;
   cursor: pointer;
   transition: background-color 0.3s;
