--- a/src/app/components/viewamostra/viewamostra.component.css
+++ b/src/app/components/viewamostra/viewamostra.component.css
@@ -1,34 +1,13 @@
-.button-container {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 16px;
-}
+.add-container {
+    display: flex;
+    height: 86vh;
+  }
 
-.add-amostra-button {
-  padding: 8px 16px;
-  font-size: 16px;
-  border: 1px;
-  border-radius: 4px;
-  background-color: #2655FB;
-  color: #fff;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.add-amostra-button:hover {
-  background-color: #0056b3;
-}
-
-
-.table-container {
+  .table-container {
     width: 100%;
     overflow-x: auto;
     height: 89vh;
   }
-
-.clickable-row {
-  cursor: pointer;
-}
   
   table {
     width: 100%;
@@ -80,5 +59,52 @@
   
   .action-buttons button i {
     font-size: 18px;
+  }
+  
+  
+  .right-section {
+    flex: 1;
+    padding: 20px;
+    background-color: #f2f2f2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative; 
+  }
+  
+  
+  .right-section {
+    flex: 1;
+  }
+  
+  .form-group {
+    margin-bottom: 15px;
+  }
+  
+  label {
+    display: block;
+    font-weight: 400;
+    margin-bottom: 8px;
+  }
+  
+  input {
+    width: 98%;
+    padding: 8px;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    height: 1.8em;
+  }
+  
+  .buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    gap: 10px;
+  }
+  
+  button {
+    width: 100%;
+    padding: 10px;
   }
   
