--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -20,7 +20,7 @@
       </div>
       <div class="form-group">
         <label for="senha" class="ff-roboto">Senha:</label>
-        <input type="senha" id="senha" name="senha" formControlName="senha" placeholder="Digite sua Senha">
+        <input type="password" id="senha" name="senha" formControlName="senha" placeholder="Digite sua Senha">
         <div class="mensagem__erro"
           *ngIf="formulario.get('senha')?.errors?.['required'] && formulario.get('senha')?.touched">
           Senha é obrigatória!
