--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,6 @@
 <header>
   <div class="left-section">
+    <img src="../../../assets/images/CycleLabLogo-NoBg.png" alt="Imagem de fundo">
     <h1 class="ff-roboto">CycleLab: Saúde para todos</h1>
   </div>
   <nav class="middle-section">
