--- a/src/styles.css
+++ b/src/styles.css
@@ -59,6 +59,70 @@
   margin-top: 1px;
 }
 
+
+/* Default Table css */
+
+.table-container {
+  width: 90%;
+  margin: 0 auto;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  overflow: hidden;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+thead {
+  background-color: #f2f2f2;
+}
+
+th,
+td {
+  padding: 12px;
+  text-align: left;
+}
+
+th {
+  font-weight: bold;
+}
+
+tbody tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+tbody tr:hover {
+  background-color: #e6e6e6;
+}
+
+.action-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+
+.action-buttons button {
+  padding: 6px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+.action-buttons button:hover {
+  color: #007bff;
+}
+
+.action-buttons button i {
+  font-size: 18px;
+}
+
+
+
 @media (min-width: 576px) {
   .container {
       width: 540px;
