--- a/src/app/components/viewamostra/viewamostra.component.html
+++ b/src/app/components/viewamostra/viewamostra.component.html
@@ -22,9 +22,8 @@
           </div>
     </div>
     <div class="right-section">
-      <div class="logo-section">
-        <h1 class="ff-roboto">Adicionar Exame</h1>
-      </div>
+      <div class="card-header"></div>
+      <h1 class="card-title ff-roboto">Adicionar Exame</h1>
       <form [formGroup]="formulario" (ngSubmit)="submitForm()">
         <div class="form-group">
           <label for="nome" class="ff-roboto">Nome do Exame:</label>
