--- a/src/app/components/viewamostra/viewamostra.component.css
+++ b/src/app/components/viewamostra/viewamostra.component.css
@@ -1,57 +1,71 @@
 .add-container {
-    display: flex;
-    height: 86vh;
-  }
+  display: flex;
+  height: 86vh;
+}
 
-  .left-section {
-    width: 50%;
-  }
-  
-  
-  .right-section {
-    flex: 1;
-    width: 50%;
-    padding: 20px;
-    background-color: #f2f2f2;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: relative; 
-  }
-  
-  
-  .right-section {
-    flex: 1;
-  }
-  
-  .form-group {
-    margin-bottom: 15px;
-  }
-  
-  label {
-    display: block;
-    font-weight: 400;
-    margin-bottom: 8px;
-  }
-  
-  input {
-    width: 98%;
-    padding: 8px;
-    border: 1px solid #000000;
-    border-radius: 5px;
-    height: 1.8em;
-  }
-  
-  .buttons {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
-    gap: 10px;
-  }
-  
-  button {
-    width: 100%;
-    padding: 10px;
-  }
-  
+.left-section {
+  width: 50%;
+}
+
+.right-section {
+  flex: 1;
+  padding: 20px;
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative; 
+}
+
+.card-header {
+  width: 100%;
+  height: 400px;
+  background-image: url('../../../assets/images/samples_viewamostra.png');
+  background-size: 100% auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin-bottom: 20px;
+}
+
+
+.card-title {
+  font-size: 24px;
+  font-weight: bold;
+  color: #000;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.right-section form {
+  margin-bottom: 20px;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+label {
+  display: block;
+  font-weight: 400;
+  margin-bottom: 8px;
+}
+
+input {
+  width: 98%;
+  padding: 8px;
+  border: 1px solid #000000;
+  border-radius: 5px;
+  height: 1.8em;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+button {
+  width: 100%;
+  padding: 10px;
+}
