--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,8 +6,8 @@
   <nav class="middle-section">
     <ul>
       <!-- Aparece não Logado -->
-      <li *ngIf="!isLoggedIn"><a class="ff-inter" routerLink="/sobre">Sobre nós</a></li>
-      <li *ngIf="!isLoggedIn"><a class="ff-inter" routerLink="/missao">Missão</a></li>
+      <li *ngIf="!isLoggedIn"><a class="ff-inter">Sobre nós</a></li>
+      <li *ngIf="!isLoggedIn"><a class="ff-inter">Missão</a></li>
       <!-- Aparece Logado -->
       <li *ngIf="isLoggedIn"><a class="ff-inter" routerLink="/homepage">Home</a></li>
       <li *ngIf="isLoggedIn"><a class="ff-inter" routerLink="/amostras">Amostras</a></li>
@@ -18,7 +18,7 @@
     <!-- Aparece não Logado -->
     <a class="ff-inter" *ngIf="!isLoggedIn" routerLink="/register">Cadastre-se</a>
     <!-- Aparece Logado -->
-    <a class="ff-inter" *ngIf="isLoggedIn" routerLink="/profile">Perfil</a>
+    <a class="ff-inter" *ngIf="isLoggedIn">Perfil</a>
     <a class="ff-inter logout-link" *ngIf="isLoggedIn" (click)="logout()">Sair</a>
   </div>
 </header>
