--- a/src/app/components/addamostra/addamostra.component.css
+++ b/src/app/components/addamostra/addamostra.component.css
@@ -1,72 +1,99 @@
 .add-container {
-    display: flex;
-    height: 86vh;
-  }
-  
-  .right-section {
-    flex: 1;
-    padding: 20px;
-    background-color: #f2f2f2;
-    display: flex;
+  display: flex;
+  height: 86vh;
+}
+
+.right-section {
+  flex: 1;
+  padding: 20px;
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+}
+
+.logo-section {
+  text-align: left;
+  margin-bottom: 8px;
+}
+
+.logo-section h1 {
+  font-size: 24px;
+}
+
+.logo-section img {
+  height: 7em;
+  position: absolute;
+  top: -1em;
+  left: 0.7em;
+}
+
+.right-section {
+  flex: 1;
+}
+
+.right-section img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+label {
+  display: block;
+  font-weight: 400;
+  margin-bottom: 8px;
+}
+
+input {
+  width: 98%;
+  padding: 8px;
+  border: 1px solid #000000;
+  border-radius: 5px;
+  height: 1.8em;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+  gap: 10px;
+}
+
+button {
+  width: 100%;
+  padding: 10px;
+}
+
+/* Media query para ajustar o componente em telas menores */
+@media (max-width: 600px) {
+  .add-container {
     flex-direction: column;
-    justify-content: center;
-    position: relative; 
+    height: auto;
   }
-  
-  .logo-section {
-    text-align: left;
-    margin-bottom: 8px;
+
+  .left-section{
+    display: none;
   }
-  
+
+  .right-section {
+    padding: 30px;
+  }
+
   .logo-section h1 {
-    font-size: 24px;
+    font-size: 20px;
   }
-  
+
   .logo-section img {
-    height: 7em;
-    position: absolute;
-    top: -1em;
-    left: 0.7em;
+    height: 5em;
   }
-  
-  .right-section {
-    flex: 1;
-  }
-  
-  .right-section img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-  }
-  
-  .form-group {
-    margin-bottom: 15px;
-  }
-  
-  label {
-    display: block;
-    font-weight: 400;
-    margin-bottom: 8px;
-  }
-  
+
   input {
-    width: 98%;
-    padding: 8px;
-    border: 1px solid #000000;
-    border-radius: 5px;
-    height: 1.8em;
-  }
-  
-  .buttons {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
-    gap: 10px;
-  }
-  
-  button {
     width: 100%;
-    padding: 10px;
   }
-  
+}
