--- a/src/app/components/editamostra/editamostra.component.css
+++ b/src/app/components/editamostra/editamostra.component.css
@@ -70,3 +70,31 @@
     padding: 10px;
   }
   
+/* Media query para ajustar o componente em telas menores */
+@media (max-width: 600px) {
+  .add-container {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .left-section{
+    display: none;
+  }
+
+  .right-section {
+    padding: 30px;
+  }
+
+  .logo-section h1 {
+    font-size: 20px;
+  }
+
+  .logo-section img {
+    height: 5em;
+  }
+
+  input {
+    width: 100%;
+  }
+}
+  
