--- a/src/app/components/fakechatbot/fakechatbot.component.css
+++ b/src/app/components/fakechatbot/fakechatbot.component.css
@@ -1,80 +1,109 @@
 .chatbot-button {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    z-index: 9999;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    background-color: #fff; /* Altere a cor de fundo conforme necessário */
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 9999;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-color: #fff;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.chatbot-button.active .tooltip {
+  opacity: 1;
+  visibility: visible;
+}
+
+.chatbot-button img {
+  width: 100%;
+  height: auto;
+}
+
+.tooltip {
+  position: absolute;
+  bottom: 3em;
+  left: 90%;
+  transform: translateX(-50%);
+  background-color: #fffdfd;
+  color: #000000;
+  padding: 5px 10px;
+  border-radius: 5px;
+  opacity: 0.7;
+}
+
+.tooltip[hidden] {
+  opacity: 0;
+  visibility: hidden;
+}
+
+
+.chat-window {
+  position: fixed;
+  bottom: 3.5em;
+  right: 4.5em;
+  z-index: 9999;
+  width: 300px;
+  max-height: 400px;
+  overflow-y: auto;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  background-color: #fff;
+  padding: 10px;
+}
+
+.message {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.response {
+  margin-bottom: 10px;
+}
+
+.options {
+  display: flex;
+  flex-direction: column;
+}
+
+.option {
+  margin-bottom: 5px;
+  padding: 5px;
+  border: 1px solid #000;
+  border-radius: 5px;
+  background-color: #f0f0f0;
+}
+
+/* Media query para ajustar o chatbot em telas menores */
+@media (max-width: 600px) {
+  .chatbot-button {
+    width: 50px;
+    height: 50px;
+    bottom: 10px;
+    right: 10px;
   }
-  
-  .chatbot-button.active .tooltip {
-    opacity: 1;
-    visibility: visible;
-  }
-  
-  .chatbot-button img {
-    width: 100%;
-    height: auto;
-  }
-  
-  .tooltip {
-    position: absolute;
-    bottom: 3em;
-    left: 90%;
-    transform: translateX(-50%);
-    background-color: #fffdfd;
-    color: #000000;
-    padding: 5px 10px;
-    border-radius: 5px;
-    opacity: 0.7;
-  }
-  
-  .tooltip[hidden] {
-    opacity: 0;
-    visibility: hidden;
-  }
-  
-  
+
   .chat-window {
-    position: fixed;
-    bottom: 3.5em;
-    right: 4.5em;
-    z-index: 9999;
-    width: 300px;
-    max-height: 400px;
-    overflow-y: auto;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    background-color: #fff;
-    padding: 10px;
+    width: 250px;
+    max-height: 300px;
+    bottom: 3em;
+    right: 2em;
   }
-  
-  .message {
-    font-weight: bold;
-    margin-bottom: 10px;
+
+  .tooltip {
+    font-size: 12px;
   }
-  
+
+  .message,
   .response {
-    margin-bottom: 10px;
+    font-size: 14px;
   }
-  
-  .options {
-    display: flex;
-    flex-direction: column;
-  }
-  
+
   .option {
-    margin-bottom: 5px;
-    padding: 5px;
-    border: 1px solid #000;
-    border-radius: 5px;
-    background-color: #f0f0f0;
+    font-size: 12px;
   }
-  
+}
