--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -1,44 +1,64 @@
 .card-container {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    padding: 2.4em;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  padding: 2.4em;
+}
+
+.card {
+  width: 400px;
+  height: 76vh;
+  border: 1.5px solid #ccc;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.card a {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  text-decoration: none;
+  color: #333;
+  height: 80%;
+  padding: 0.0em;
+}
+
+.card img {
+  width: 100%;
+  height: 11em;
+  object-fit: cover;
+  border-radius: 5px 5px 0 0;
+}
+
+.card-title {
+  font-size: 30px;
+  margin: 0.3em;
+  margin-top: 1.7em;
+}
+
+.card-description {
+  font-size: 16px;
+  margin: 0.3em; 
+  margin-top: 0.7em;
+}
+
+/* Media query para ajustar os cards em telas menores */
+@media (max-width: 600px) {
+  .card-container {
+    flex-wrap: wrap;
+    padding: 1.4em;
   }
-  
+
   .card {
-    width: 400px;
-    height: 76vh;
-    border: 1.5px solid #ccc;
-    border-radius: 5px;
-    overflow: hidden;
-  }
-  
-  .card a {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    text-decoration: none;
-    color: #333;
-    height: 80%;
-    padding: 0.0em;
-  }
-  
-  .card img {
     width: 100%;
-    height: 11em;
-    object-fit: cover;
-    border-radius: 5px 5px 0 0;
+    height: auto;
   }
-  
+
   .card-title {
-    font-size: 30px;
-    margin: 0.3em;
-    margin-top: 1.7em;
+    font-size: 24px;
   }
-  
+
   .card-description {
-    font-size: 16px;
-    margin: 0.3em; 
-    margin-top: 0.7em;
+    font-size: 14px;
   }
-  
+}
