--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -78,3 +78,27 @@
     padding: 10px;
   }
   
+  @media (max-width: 600px) {
+    .left-section {
+      flex: 1;
+      padding: 20px;
+      background-color: #f2f2f2;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      position: relative;
+    }
+  
+    .right-section {
+      display: none;
+    }
+  
+    .logo-section h1 {
+      margin-left: 0; /* Remover o deslocamento do título no modo responsivo */
+      text-align: center; /* Centralizar o título no modo responsivo */
+    }
+  
+    .logo-section img {
+      display: none; /* Ocultar a imagem do logotipo no modo responsivo */
+    }
+  }
