feat: role-based directive to buttons

--- a/src/app/components/viewamostra/viewamostra.component.css
+++ b/src/app/components/viewamostra/viewamostra.component.css
@@ -40,6 +40,16 @@
   margin-bottom: 20px;
 }
 
+button:disabled {
+  display: none;
+}
+
+p {
+  font-size: small;
+  margin-bottom: 10px;
+  color: #ff000091
+}
+
 .form-group {
   margin-bottom: 15px;
 }
