--- a/src/app/components/amostras/amostras.component.css
+++ b/src/app/components/amostras/amostras.component.css
@@ -20,7 +20,12 @@
   background-color: #0056b3;
 }
 
+.add-amostra-button:disabled {
+  display: none;
+}
+
 .clickable-row {
   cursor: pointer;
 }
+
 
