--- a/src/app/components/amostras/amostras.component.html
+++ b/src/app/components/amostras/amostras.component.html
@@ -1,5 +1,5 @@
 <div class="button-container">
-  <button class="add-amostra-button ff-roboto" [routerLink]="['/addamostra']">Adicionar Amostra</button>
+  <button appRoleBased="ADMIN" class="add-amostra-button ff-roboto" [routerLink]="['/addamostra']">Adicionar Amostra</button>
 </div>
 
 <div class="table-container">
@@ -19,8 +19,8 @@
           <td class="ff-roboto">{{ amostra.nome }}</td>
           <td class="ff-roboto">{{ amostra.numeroDeRegistro }}</td>
           <td class="action-buttons">
-            <button [routerLink]="'/editamostra/' + amostra.id" (click)="stopPropagation($event)">Editar</button>
-            <button (click)="deleteAmostra(amostra); stopPropagation($event)">Excluir</button>
+            <button appRoleBased="ADMIN" [routerLink]="'/editamostra/' + amostra.id" (click)="stopPropagation($event)">Editar</button>
+            <button appRoleBased="ADMIN" (click)="deleteAmostra(amostra); stopPropagation($event)">Excluir</button>
           </td>
         </tr>
       </ng-container>
