--- a/src/app/components/viewamostra/viewamostra.component.html
+++ b/src/app/components/viewamostra/viewamostra.component.html
@@ -24,10 +24,11 @@
     <div class="right-section">
       <div class="card-header"></div>
       <h1 class="card-title ff-roboto">Adicionar Exame</h1>
+      <p class="ff-roboto">Apenas Administradores</p>
       <form [formGroup]="formulario" (ngSubmit)="submitForm()">
         <div class="form-group">
           <label for="nome" class="ff-roboto">Nome do Exame:</label>
-          <input type="nome" id="nome" name="nome" formControlName="nome" placeholder="Digite o nome do exame">
+          <input appRoleBased="ADMIN" type="nome" id="nome" name="nome" formControlName="nome" placeholder="Digite o nome do exame">
           <div class="mensagem__erro"
             *ngIf="formulario.get('nome')?.errors?.['required'] && formulario.get('nome')?.touched">
             O nome do exame é obrigatório!
@@ -35,14 +36,14 @@
         </div>
         <div class="form-group">
           <label for="resultadoDoExame" class="ff-roboto">Resultado do Exame:</label>
-          <input type="resultadoDoExame" id="resultadoDoExame" name="resultadoDoExame" formControlName="resultadoDoExame" placeholder="Digite o resultado do exame com unidade de medida">
+          <input appRoleBased="ADMIN" type="resultadoDoExame" id="resultadoDoExame" name="resultadoDoExame" formControlName="resultadoDoExame" placeholder="Digite o resultado do exame com unidade de medida">
           <div class="mensagem__erro"
             *ngIf="formulario.get('resultadoDoExame')?.errors?.['required'] && formulario.get('resultadoDoExame')?.touched">
             O resultado do exame é obrigatório!
           </div>
         </div>
         <div class="buttons">
-          <button type="submit" class="botao ff-roboto">Adicionar Exame</button>
+          <button appRoleBased="ADMIN" type="submit" class="botao ff-roboto">Adicionar Exame</button>
           <button type="button" class="botao__secundario ff-roboto" routerLink="/amostras">Voltar</button>
         </div>
       </form>
