fix: removing text and imports

--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -11,7 +11,7 @@
       <a routerLink="/users">
         <img src="../../../assets/images/user_homepage.png" alt="Imagem de Usuários">
         <h3 class="card-title ff-roboto">Visualizar <br>Usuários</h3>
-        <p class="card-description ff-roboto">Acesso a página de usuários, onde é possível visualizar, cadastrar, editar ou deletar um usuário.</p>
+        <p class="card-description ff-roboto">Acesso a página de usuários, onde é possível visualizar, editar ou deletar um usuário.</p>
       </a>
     </div>
   </div>
